# backend

./: .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker-compose/: app.yaml  db.yaml  rabbitmq.yaml
src/: app.py  container.py
src/adapters/database/: __init__.py  session.py  uow.py
src/adapters/database/migrations/: env.py
src/adapters/database/models/: __init__.py  activities.py  (+9 more)
src/adapters/repositories/: __init__.py  base.py  exceptions.py
src/core/: security.py  settings.py
src/core/auth/: __init__.py  admin.py  dependencies.py  jwt_service.py  providers.py  telegram_mini_app_auth.py
src/domain/: exceptions.py
src/domain/entities/: picture.py  user.py  user_pictures.py
src/domain/value_objects/: coin.py  experience.py  telegram_id.py
src/drivers/: COMPLETE_API_DOCUMENTATION.md
src/drivers/rest/: API_DOCUMENTATION.md  __init__.py  activity_types.py  auth.py  backgrounds.py  character_backgrounds.py  character_items.py  characters.py  daily_activities.py  daily_progress.py  exceptions.py  item_background_positions.py  item_categories.py  items.py  mood_history.py  transactions.py  user_friends.py  user_settings.py  users.py
src/ports/repositories/: pictures.py  user_pictures.py  users.py
src/use_cases/activity_types/: manage_activity_types.py
src/use_cases/auth/: __init__.py  authenticate.py
src/use_cases/backgrounds/: manage_backgrounds.py
src/use_cases/character_backgrounds/: manage_character_backgrounds.py
src/use_cases/character_items/: manage_character_items.py
src/use_cases/characters/: create_character.py  delete_character.py  get_character.py  update_character.py
src/use_cases/daily_activities/: manage_daily_activities.py
src/use_cases/daily_progress/: manage_daily_progress.py
src/use_cases/item_background_positions/: manage_positions.py
src/use_cases/item_categories/: manage_item_categories.py
src/use_cases/items/: manage_items.py
src/use_cases/mood_history/: manage_mood_history.py
src/use_cases/pictures/: __init__.py  get_picture.py  list_opened_pictures.py  open_picture.py  upsert_picture.py
src/use_cases/transactions/: manage_transactions.py
src/use_cases/user_friends/: manage_user_friends.py
src/use_cases/user_settings/: manage_settings.py
src/use_cases/users/: get_user.py  manage_users.py  upsert_user.py
(+50 files in other folders)
