[project]
name = "save-your-back-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "NEZuko1337",email = "zuko13371@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.12.0,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "fastapi (>=0.115.0,<0.116.0)",
    "uvicorn[standard] (>=0.30.0,<0.31.0)",
    "sqlalchemy[asyncio] (>=2.0.35,<3.0.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
    "psycopg[binary] (>=3.2.1,<4.0.0)",
    "alembic (>=1.13.2,<2.0.0)",
    "dependency-injector (>=4.43.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
