[tool.poetry]
package-mode = false

[project]
name = "healthity-backend-service"
version = "1.0.0"
description = ""
authors = [
    {name = "NEZuko1337",email = "zuko13371@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "pydantic (>=2.12.0,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "fastapi (>=0.115.0,<0.116.0)",
    "uvicorn[standard] (>=0.30.0,<0.31.0)",
    "sqlalchemy[asyncio] (>=2.0.35,<3.0.0)",
    "asyncpg (>=0.30.0,<0.40.0)",
    "psycopg[binary] (>=3.2.1,<4.0.0)",
    "alembic (>=1.13.2,<2.0.0)",
    "dependency-injector (>=4.43.0,<5.0.0)",
    "bcrypt (>=4.0.0,<5.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "init-data-py (>=0.2.6,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
